kubernetes/stackrox-central/base/postgres/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stackrox-app
  namespace: stackrox
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: stackrox-central-services
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: stackrox
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: stackrox
          podSelector:
            matchLabels:
              app: central
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stackrox-postgres
  namespace: stackrox
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: stackrox-central-services
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: stackrox
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: stackrox
          podSelector:
            matchLabels:
              postgres-operator.crunchydata.com/cluster: stackrox
